# xviz

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  TODO.md  conanfile.py  example_server.cpp  example_xviz_server.cpp  main.cpp  mutex_queue
.github/: codecov.yml
.github/workflows/: cd.yml  ci.yml
cmake/: CMakeLists.txt  xvizConfig.cmake.in
cmake/examples/: CMakeLists.txt
cmake/src/: CMakeLists.txt
cmake/test/: CMakeLists.txt
examples/: CMakeLists.txt  example.cc  example.cpp  example_server.cc  example_xviz_server.cpp
include/: message.h
include/builder/: base_builder.h  metadata.h  pose.h  primitive.h  time_series.h  ui_primitive.h  xviz_builder.h
include/io/: glb_writer.h
include/proto/: annotation.pb.h  core.pb.h  declarativeui.pb.h  envelope.pb.h  options.pb.h  primitives.pb.h  session.pb.h  style.pb.h  uiprimitives.pb.h
include/server/: config.h  xviz_handler.h  xviz_server.h  xviz_session.h
include/utils/: defines.h  definitions.h  utils.h
include/xviz/: def.h  message.h  xviz.h
include/xviz/builder/: base_builder.h  builder.h  builder_mixin.h  metadata.h  pose.h  primitive.h  time_series.h  ui_primitive.h
include/xviz/builder/declarative_ui/: base_ui_builder.h  base_ui_component_builder.h  container_builder.h  metric_builder.h  panel_builder.h  ui_builder.h  video_builder.h
include/xviz/builder/metadata/: metadata.h  metadata_mixin.h  stream_metadata.h  ui_metadata.h
include/xviz/builder/primitive/: circle.h  image.h  point.h  polygon.h  polyline.h  primitive.h  primitive_base.h  primitive_mixin.h  text.h
include/xviz/io/: protobuf_writer.h
include/xviz/proto/xviz/v2/: annotation.pb.h  core.pb.h  envelope.pb.h  options.pb.h  primitives.pb.h  session.pb.h  style.pb.h  uiprimitives.pb.h
include/xviz/server/: xviz_handler.h  xviz_server.h  xviz_session.h
include/xviz/utils/: base64.h  concepts.h  definitions.h  style_utils.h  utils.h
misc/cicd/codecov/: generate_coverage_xml.sh
misc/cicd/consumer/: CMakeLists.txt  conanfile.py
misc/scripts/: coverage_and_host.sh
pb/: style.proto
proto/: annotation.pb.h  core.pb.cc  envelope.pb.cc  envelope.pb.h  primitives.pb.cc  primitives.pb.h  session.pb.h  style.pb.h  uiprimitives.pb.cc  uiprimitives.pb.h
proto/xviz/v2/: declarativeui.proto
src/: CMakeLists.txt  main.cpp  message.cpp  xviz.cc  xviz.cpp
src/builder/: CMakeLists.txt  base_builder.cpp  metadata.cpp  pose.cpp  primitive.cpp  time_series.cpp  ui_primitive.cpp  xviz_builder.cpp
src/builder/declarative_ui/: base_ui_builder.cpp  base_ui_component_builder.cpp  container_builder.cpp  metric_builder.cpp  panel_builder.cpp  plot_builder.cpp  table_builder.cpp  ui_builder.cpp  video_builder.cpp
src/io/: glb_writer.cpp  protobuf_writer.cpp
src/proto/: CMakeLists.txt  annotation.pb.cc  core.pb.cc  declarativeui.pb.cc  envelope.pb.cc  options.pb.cc  primitives.pb.cc  session.pb.cc  style.pb.cc  uiprimitives.pb.cc
src/proto/xviz/v2/: annotation.pb.cc  core.pb.cc  envelope.pb.cc  options.pb.cc  primitives.pb.cc  session.pb.cc  style.pb.cc  uiprimitives.pb.cc
src/server/: xviz_handler.cpp  xviz_server.cpp  xviz_session.cpp
src/utils/: CMakeLists.txt  base64.cc  utils.cc  utils.cpp
test/: CMakeLists.txt  test_all.cpp  test_builder.hpp  test_metadata.h  test_server.h  test_update.h  test_utils.cpp  test_utils.h  test_writer.hpp
tests/: CMakeLists.txt  test_metadata_builder.cc
tests/utils/: checker.h  cleanup.h  comparators.h  converters.cc  converters.h  macros.h  types.h
